# pytube-gui

./: README.md  pyproject.toml
pytube_gui/: run.py
tests/: test_pytube_gui.py
