[tool.poetry]
name = "pytube-gui"
version = "0.1.0"
description = ""
authors = ["jelte.derksen@rhdhv.com <jelte.derksen@rhdhv.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^10.0.0"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
